CHANGELOG

2.1.10
UTIL:

BUGFIX:
* type=custom-url-category-merger | bugfix to merge correctly objects in DG hierarchy - add reason for exportcsv=file.html
* type=custom-url-category-merger | introduce argument allowaddingmissingobjects

GENERAL:


2.1.9 (20230712)
UTIL:
* type=key-manager - extend support for new connection method "in=sase-api://"
* type=address/service/rule/tag/schedule | enable support for actions=display with method "in=sase-api://"
* type=rule | introduce 'filter=(group-tag is.regex /VALUE/)'
* type=tag-merger | extend output why it can not be merged
* different object classes | introduction of sase-api connection - update / separation between XML API and SaseAPI
* type=address-/addressgroup-/service-/servicegroup-/tag-merger | extend with in=sase-api:// support
* in=sase-api:// - Strate Cloud Manager | extend reading objects based on type=
* type=rule | actions=display/exporttoexcel - extend additional argument ResolveAddressSummary with name/ip value from nested members
* type=xml-issue  | extend check with secRule category field for ANY + other category configured
* type=custom-url-catgory-merger | introduction of new merger utility
* type=XYZ | actions=exporttoexcel:file.html - introduce ID field
* type=addressgroup-merger exportcsv=file.html | extend skipped information with reason column

BUGFIX:
* class Zone.php | bugfix to create XML node "zone" if not yet available during creating of a new Zone
* type=address-merger | bugfix if overwritten object has not same value
* type=vendor-migration | bugfix for wildcard 0.0.0.0 - do not replace leading 0
* type=tag in=sase-api:// | bugfix to handle tag color information correctly
* type=address actions=move:DGNAME | bugfix if same object name is available on upperlevel
* type=rule actions=exporttoexcel:FILE.html,resolveAddresssummary | bugfix correction of 0.0.0.0/24 to 0.0.0.0/0
* type=address | bugfix for dynamic address-groups which are using address objects with tag filter from upper level